--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,11 +1,18 @@
-<label for="email">email</label>
+<% ["email", "username", "pin", "website", "address", "alias"].each do |item| %>
+  <label for=<%= item %>>
+    <%= item %>
+  </label>
+  <input type="text" name=<%= item %> id=<%= item %> class="fancy_form">
+<% end %>
+
+<!-- <label for="email">email</label>
 <input type="text" name="email" id="email" class="fancy_form" >
 
 <label for="username">username</label>
 <input type="text" name="username" id="username" class="fancy_form" >
 
 <label for="pin">pin</label>
-<input type="text" name="pin" id="pin" class="fancy_form"
+<input type="text" name="pin" id="pin" class="fancy_form" >
 
 <label for="website">website</label>
 <input type="text" name="website" id="website" class="fancy_form" >
@@ -14,4 +21,4 @@
 <input type="text" name="address" id="address" class="fancy_form" >
 
 <label for="alias">alias</label>
-<input type="text" name="alias" id="alias" class="fancy_form" >
+<input type="text" name="alias" id="alias" class="fancy_form" > -->
